k8s/app2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-depl
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: app2:0.0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
