k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envtest-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: domain.local
    http:
      paths:
      - path: /v1(/|$)(.*)
        pathType: ImplementationSpecific 
        backend:
          service:
            name: app1-svc
            port:
              number: 3000
      - path: /v2(/|$)(.*)
        pathType: ImplementationSpecific 
        backend:
          service:
            name: app2-svc
            port:
              number: 3000
